--- a/index.html
+++ b/index.html
@@ -1,119 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Infinite Cookie | Every Flavor Imaginable</title>
     
+    <link rel="icon" type="image/png" href="public/Gemini_cookie.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barrio&display=swap" rel="stylesheet">
-
-    <style>
-        :root {
-            --primary: #6d4c41; /* Cookie Brown */
-            --accent: #ff8a65;  /* Warm Caramel */
-            --bg: #fffbf0;      /* Soft Cream */
-        }
-
-        body { 
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
-            margin: 0; 
-            background-color: var(--bg);
-            color: #333;
-        }
-
-        header {
-            background: var(--primary);
-            color: white;
-            padding: 2.5rem;
-            text-align: center;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-        }
-
-        /* Applying Barrio Font ONLY to the Title */
-        h1 {
-            font-family: 'Barrio', system-ui;
-            font-size: 3.5rem;
-            margin: 0;
-            letter-spacing: 2px;
-            text-shadow: 3px 3px 0px var(--accent);
-        }
-
-        .tagline { font-style: italic; font-size: 1.2rem; margin-top: 10px; }
-
-        .flavor-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 20px;
-            padding: 40px 10%;
-        }
-
-        .cookie-card {
-            background: white;
-            border-radius: 15px;
-            overflow: hidden;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
-            transition: transform 0.3s ease;
-            text-align: center;
-            border: 2px solid transparent;
-        }
-
-        .cookie-card:hover {
-            transform: translateY(-10px);
-            border-color: var(--accent);
-        }
-
-        .cookie-emoji {
-            font-size: 4rem;
-            padding: 20px;
-            display: block;
-        }
-
-        .cookie-card h3 { margin: 10px 0; color: var(--primary); }
-        .cookie-card p { padding: 0 15px 20px; font-size: 0.9rem; }
-
-        footer {
-            text-align: center;
-            padding: 2rem;
-            background: #3e2723;
-            color: white;
-        }
-    </style>
-</head>
-<body>
-
-    <header>
-        <h1>The Infinite Cookie</h1>
-        <p class="tagline">If you can dream it, we can bake it.</p>
-    </header>
-
-    <section>
-        <div class="flavor-grid">
-            <div class="cookie-card">
-                <span class="cookie-emoji">🍪</span>
-                <h3>Classic Chunk</h3>
-                <p>The OG. Loaded with semi-sweet Belgian chocolate and a hint of sea salt.</p>
-            </div>
-
-            <div class="cookie-card">
-                <span class="cookie-emoji">🍯</span>
-                <h3>Salted Caramel</h3>
-                <p>A buttery dough swirled with homemade caramel and golden toffee bits.</p>
-            </div>
-
-            <div class="cookie-card">
-                <span class="cookie-emoji">✨</span>
-                <h3>Cloud Sugar</h3>
-                <p>Soft, pillowy, and topped with a shimmering vanilla glaze.</p>
-            </div>
-        </div>
-    </section>
-
-    <footer>
-        <p>Coming Soon to a Storefront Near You!</p>
-        <p>&copy; 2026 The Infinite Cookie Co.</p>
-    </footer>
-
-</body>
-</html>
+    
+    </head>
