--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,5 +10,82 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barrio&display=swap" rel="stylesheet">
-    
-    </head>
+
+    <style>
+        :root {
+            --primary: #6d4c41; /* Cookie Brown */
+            --accent: #ff8a65;  /* Warm Caramel */
+            --bg: #fffbf0;      /* Soft Cream */
+            --white: #ffffff;
+        }
+
+        body { 
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+            margin: 0; 
+            background-color: var(--bg);
+            color: #333;
+        }
+
+        /* Header & Title Styling */
+        header {
+            background: var(--primary);
+            color: white;
+            padding: 3rem 1rem;
+            text-align: center;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+        }
+
+        h1 {
+            font-family: 'Barrio', system-ui;
+            font-size: clamp(2.5rem, 8vw, 4rem); /* Responsive font size */
+            margin: 0;
+            letter-spacing: 2px;
+            text-shadow: 3px 3px 0px var(--accent);
+        }
+
+        .tagline { 
+            font-style: italic; 
+            font-size: 1.2rem; 
+            margin-top: 10px;
+            opacity: 0.9;
+        }
+
+        /* Cookie Grid Layout */
+        .flavor-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 25px;
+            padding: 50px 8%;
+        }
+
+        .cookie-card {
+            background: var(--white);
+            border-radius: 20px;
+            overflow: hidden;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+            transition: transform 0.3s ease, border-color 0.3s ease;
+            text-align: center;
+            border: 3px solid transparent;
+            padding-bottom: 20px;
+        }
+
+        .cookie-card:hover {
+            transform: translateY(-10px);
+            border-color: var(--accent);
+        }
+
+        .cookie-emoji {
+            font-size: 4.5rem;
+            padding: 30px 0 10px 0;
+            display: block;
+        }
+
+        .cookie-card h3 { 
+            margin: 10px 0; 
+            color: var(--primary);
+            font-size: 1.5rem;
+        }
+
+        .cookie-card p { 
+            padding: 0 20px; 
+            font-size: 1rem;
