--- a/index.html
+++ b/index.html
@@ -13,79 +13,76 @@
 
     <style>
         :root {
-            --primary: #6d4c41; /* Cookie Brown */
-            --accent: #ff8a65;  /* Warm Caramel */
-            --bg: #fffbf0;      /* Soft Cream */
+            --primary: #6d4c41; /* Rich Cookie Brown */
+            --accent: #ff8a65;  /* Warm Caramel/Orange */
+            --bg: #fffbf0;      /* Soft Creamy White */
             --white: #ffffff;
+            --text: #3e2723;
         }
 
         body { 
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
             margin: 0; 
             background-color: var(--bg);
-            color: #333;
+            color: var(--text);
+            line-height: 1.6;
         }
 
-        /* Header & Title Styling */
+        /* Header Section */
         header {
             background: var(--primary);
             color: white;
-            padding: 3rem 1rem;
+            padding: 4rem 1rem;
             text-align: center;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 15px rgba(0,0,0,0.15);
         }
 
         h1 {
             font-family: 'Barrio', system-ui;
-            font-size: clamp(2.5rem, 8vw, 4rem); /* Responsive font size */
+            font-size: clamp(2.5rem, 10vw, 5rem);
             margin: 0;
-            letter-spacing: 2px;
-            text-shadow: 3px 3px 0px var(--accent);
+            letter-spacing: 3px;
+            text-shadow: 4px 4px 0px var(--accent);
+            line-height: 1.1;
         }
 
         .tagline { 
             font-style: italic; 
-            font-size: 1.2rem; 
-            margin-top: 10px;
-            opacity: 0.9;
+            font-size: 1.3rem; 
+            margin-top: 15px;
+            font-weight: 300;
+            letter-spacing: 1px;
         }
 
-        /* Cookie Grid Layout */
+        /* Cookie Flavor Grid */
         .flavor-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 25px;
-            padding: 50px 8%;
+            gap: 30px;
+            padding: 60px 10%;
+            max-width: 1400px;
+            margin: 0 auto;
         }
 
         .cookie-card {
             background: var(--white);
-            border-radius: 20px;
+            border-radius: 25px;
             overflow: hidden;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.05);
-            transition: transform 0.3s ease, border-color 0.3s ease;
+            box-shadow: 0 8px 20px rgba(0,0,0,0.06);
+            transition: all 0.3s ease;
             text-align: center;
-            border: 3px solid transparent;
-            padding-bottom: 20px;
+            border: 4px solid transparent;
+            padding: 20px;
         }
 
         .cookie-card:hover {
-            transform: translateY(-10px);
+            transform: translateY(-12px);
             border-color: var(--accent);
+            box-shadow: 0 12px 30px rgba(0,0,0,0.1);
         }
 
         .cookie-emoji {
-            font-size: 4.5rem;
-            padding: 30px 0 10px 0;
+            font-size: 5rem;
+            margin-bottom: 10px;
             display: block;
-        }
-
-        .cookie-card h3 { 
-            margin: 10px 0; 
-            color: var(--primary);
-            font-size: 1.5rem;
-        }
-
-        .cookie-card p { 
-            padding: 0 20px; 
-            font-size: 1rem;
+            filter: drop-shadow(2px 4px 6px rgba(0
