--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Infinite Cookie | Every Flavor Imaginable</title>
+    <title>The Infinite Cookie | Gemini's Special Batch</title>
     
     <link rel="icon" type="image/png" href="public/Gemini_cookie.png">
 
@@ -13,9 +13,9 @@
 
     <style>
         :root {
-            --primary: #6d4c41; /* Rich Cookie Brown */
-            --accent: #ff8a65;  /* Warm Caramel/Orange */
-            --bg: #fffbf0;      /* Soft Creamy White */
+            --primary: #6d4c41; /* Cookie Brown */
+            --accent: #ff8a65;  /* Warm Caramel */
+            --bg: #fffbf0;      /* Soft Cream */
             --white: #ffffff;
             --text: #3e2723;
         }
@@ -32,26 +32,33 @@
         header {
             background: var(--primary);
             color: white;
-            padding: 4rem 1rem;
+            padding: 3rem 1rem;
             text-align: center;
             box-shadow: 0 4px 15px rgba(0,0,0,0.15);
         }
 
+        .logo-container img {
+            width: 120px;
+            height: auto;
+            border-radius: 50%;
+            border: 4px solid var(--accent);
+            background: white;
+            margin-bottom: 15px;
+        }
+
         h1 {
             font-family: 'Barrio', system-ui;
-            font-size: clamp(2.5rem, 10vw, 5rem);
+            font-size: clamp(2.5rem, 10vw, 4.5rem);
             margin: 0;
-            letter-spacing: 3px;
-            text-shadow: 4px 4px 0px var(--accent);
-            line-height: 1.1;
+            letter-spacing: 2px;
+            text-shadow: 3px 3px 0px var(--accent);
         }
 
         .tagline { 
             font-style: italic; 
-            font-size: 1.3rem; 
-            margin-top: 15px;
-            font-weight: 300;
-            letter-spacing: 1px;
+            font-size: 1.2rem; 
+            margin-top: 10px;
+            opacity: 0.9;
         }
 
         /* Cookie Flavor Grid */
@@ -59,30 +66,103 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
             gap: 30px;
-            padding: 60px 10%;
-            max-width: 1400px;
+            padding: 50px 8%;
+            max-width: 1200px;
             margin: 0 auto;
         }
 
         .cookie-card {
             background: var(--white);
-            border-radius: 25px;
+            border-radius: 20px;
             overflow: hidden;
-            box-shadow: 0 8px 20px rgba(0,0,0,0.06);
-            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+            transition: transform 0.3s ease;
             text-align: center;
-            border: 4px solid transparent;
+            border: 3px solid transparent;
             padding: 20px;
         }
 
         .cookie-card:hover {
-            transform: translateY(-12px);
+            transform: translateY(-10px);
             border-color: var(--accent);
-            box-shadow: 0 12px 30px rgba(0,0,0,0.1);
+        }
+
+        .cookie-card img.small-logo {
+            width: 60px;
+            margin-bottom: 10px;
         }
 
         .cookie-emoji {
-            font-size: 5rem;
-            margin-bottom: 10px;
+            font-size: 4rem;
             display: block;
-            filter: drop-shadow(2px 4px 6px rgba(0
+            margin-bottom: 10px;
+        }
+
+        .cookie-card h3 { 
+            margin: 10px 0; 
+            color: var(--primary);
+            font-size: 1.5rem;
+        }
+
+        .cookie-card p { 
+            padding: 0 10px; 
+            font-size: 0.95rem; 
+            color: #666;
+        }
+
+        /* Footer Section */
+        footer {
+            text-align: center;
+            padding: 3rem 1rem;
+            background: #3e2723;
+            color: white;
+            margin-top: 40px;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <div class="logo-container">
+            <img src="public/Gemini_cookie.png" alt="Gemini Cookie Logo">
+        </div>
+        <h1>The Infinite Cookie</h1>
+        <p class="tagline">Every flavor you can imagine, baked fresh by Gemini.</p>
+    </header>
+
+    <main>
+        <section class="flavor-grid">
+            <div class="cookie-card" style="border-color: var(--accent); background: #fff5f2;">
+                <img src="public/Gemini_cookie.png" class="small-logo" alt="Gemini Icon">
+                <h3>The Gemini Special</h3>
+                <p>Our signature flavor! A cosmic blend of white chocolate, blue raspberry swirls, and star-shaped sprinkles.</p>
+            </div>
+
+            <div class="cookie-card">
+                <span class="cookie-emoji">🍪</span>
+                <h3>Classic Chunk</h3>
+                <p>The gold standard. Pure buttery goodness packed with giant dark chocolate chunks.</p>
+            </div>
+
+            <div class="cookie-card">
+                <span class="cookie-emoji">🍯</span>
+                <h3>Salted Caramel</h3>
+                <p>Rich, gooey caramel swirled into a salty dough. Perfection in every bite.</p>
+            </div>
+
+            <div class="cookie-card">
+                <span class="cookie-emoji">✨</span>
+                <h3>Cloud Sugar</h3>
+                <p>Soft as a cloud and topped with a shimmering, melt-in-your-mouth vanilla glaze.</p>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p><strong>Storefront Opening 2026</strong></p>
+        <p>Built with GitHub Pages & Gemini</p>
+        <p>&copy; The Infinite Cookie Co.</p>
+    </footer>
+
+</body>
+</html>
